Final notebook draft

--- a/notebooks/healthline_analysis.ipynb
+++ b/notebooks/healthline_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "caf9ea70-f2c0-4745-84ca-e803bd0b1803",
    "metadata": {},
    "source": [
-    "# **From Random to Relevant:**  \n",
+    "# 📊 **From Random to Relevant:**  \n",
     "## Predictive Modeling for Optimized Asset Assignment\n",
     "\n",
     "This notebook dives into the key factors behind user conversions across Healthline’s digital assets, develops predictive models to improve asset assignment, and estimates potential revenue gains from more effective targeting approaches. The aim is to support real-time decisions that boost user engagement while maximizing monetization opportunities.\n",
